# wc_server

./: .gitignore  .lib.rs.swp  Cargo.toml  Cargo_temp.toml  README.md
_notes/: _notes.md  _todo.md
client/: Cargo.toml
data/: ws.env  ws_data
db_api/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: .main.r.swp  _TODO  _notes.md  lib.rs  main.rs  structs_old.rs
tests/: test_0.rs
