[package]
name = "ws_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "ws_api"
path = "src/lib.rs"

[[bin]]
name = "ws_server_bin"
path = "src/main.rs"

[dependencies]
http = "1.4.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8" , features = ["runtime-tokio", "tls-native-tls", "mysql"] }
dotenv = "0.15"
