[package]
name = "ws_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "ws_api"
path = "src/lib.rs"

[[bin]]
name = "ws_server_bin"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json"] } 
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8" , features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
anyhow = { version = "1.0" }
serde = { version = "1.0" , faturues = [ "derive" ]}
serde_json = { version = "1.0" }
warp = { version = "0.4", features = ["server"] }
